--- a/src/app/layouts/user/components/timeline-posts-list/timeline-posts-list.component.html
+++ b/src/app/layouts/user/components/timeline-posts-list/timeline-posts-list.component.html
@@ -1,4 +1,4 @@
-<div class="container" fxLayoutAlign="space-around center">
+<div class="container pb-5 mb-5" fxLayoutAlign="space-around center">
 
 
     <div fxLayout="column" fxFlex="50" fxFlex.xs="100" fxFlex.sm="100">
@@ -16,6 +16,8 @@
             </mat-card-header>
             <mat-card-content>
                 <p class="subtitle-2 my-2">
+
+
                     {{post.content}}
                 </p>
             </mat-card-content>
@@ -23,14 +25,49 @@
             <img *ngIf="post.images.length===1" mat-card-image src="{{post.images[0].image_url}}"
                 alt="Photo of a Shiba Inu">
 
-            <mat-grid-list *ngIf="post.images.length > 1" cols="{{post.images.length}}" cols="2" rows="2"
-                rowHeight="1:3">
+            <mat-grid-list *ngIf="post.images.length === 2" cols="{{post.images.length}}" cols="2" rowHeight="2:2">
 
                 <mat-grid-tile *ngFor="let img of post.images">
                     <img loading="lazy" mat-card-image src="{{img.image_url}}" alt="Photo of a Shiba Inu">
                 </mat-grid-tile>
 
             </mat-grid-list>
+
+
+            <mat-grid-list *ngIf="post.images.length === 3" cols="{{post.images.length}}" >
+
+                <mat-grid-tile [colspan]="2" [rowspan]="1">
+                    <img loading="lazy" mat-card-image src="{{post.images[0].image_url}}" alt="Photo of a Shiba Inu">
+                </mat-grid-tile>
+                <mat-grid-tile [colspan]="1" [rowspan]="1">
+                    <img loading="lazy" mat-card-image src="{{post.images[1].image_url}}" alt="Photo of a Shiba Inu">
+                </mat-grid-tile>
+                <mat-grid-tile [colspan]="3" [rowspan]="1">
+                    <img loading="lazy" mat-card-image src="{{post.images[2].image_url}}" alt="Photo of a Shiba Inu">
+                </mat-grid-tile>
+
+            </mat-grid-list>
+
+
+            <mat-grid-list *ngIf="post.images.length === 4" cols="{{post.images.length}}" >
+
+                <mat-grid-tile   [colspan]="2" [rowspan]="1">
+                    <img loading="lazy" mat-card-image src="{{post.images[0].image_url}}" alt="Photo of a Shiba Inu">
+                </mat-grid-tile>
+                <mat-grid-tile [colspan]="2" [rowspan]="1">
+                    <img loading="lazy" mat-card-image src="{{post.images[1].image_url}}" alt="Photo of a Shiba Inu">
+                </mat-grid-tile>
+                <mat-grid-tile [colspan]="2" [rowspan]="1">
+                    <img loading="lazy" mat-card-image src="{{post.images[2].image_url}}" alt="Photo of a Shiba Inu">
+                </mat-grid-tile>
+
+                 <mat-grid-tile [colspan]="2" [rowspan]="1">
+                    <img loading="lazy" mat-card-image src="{{post.images[2].image_url}}" alt="Photo of a Shiba Inu">
+                </mat-grid-tile>
+
+            </mat-grid-list>
+
+          
 
 
             <mat-card-actions fxLayout="row" fxLayoutAlign="space-between center" fxFlex="100">
@@ -40,37 +77,38 @@
 
             <mat-divider></mat-divider>
 
-           
-
-          
 
 
-                <mat-expansion-panel fxLayout="column" (opened)="addCommentFormOpen = true" (closed)="addCommentFormOpen = false">
-                  
-                    <mat-expansion-panel-header >
 
 
-                      
-                        
-                        <mat-card-actions fxLayout="row" fxLayoutAlign="space-between center" fxFlex="100">
-                            <button mat-button>
-                                <mat-icon>favorite_border</mat-icon>
-                                Love
-                            </button>
-                            <button mat-button>
-                                <mat-icon> chat_bubble_outline</mat-icon>
-                                Comment
-                            </button>
-                        </mat-card-actions>
-                    
-                    </mat-expansion-panel-header>
 
-                    
-                    
-                    
-                    <p>I'm visible because I am open</p>
-                </mat-expansion-panel>
-           
+            <mat-expansion-panel fxLayout="column" (opened)="addCommentFormOpen = true"
+                (closed)="addCommentFormOpen = false">
+
+                <mat-expansion-panel-header>
+
+
+
+
+                    <mat-card-actions fxLayout="row" fxLayoutAlign="space-between center" fxFlex="100">
+                        <button mat-button>
+                            <mat-icon>favorite_border</mat-icon>
+                            Love
+                        </button>
+                        <button mat-button>
+                            <mat-icon> chat_bubble_outline</mat-icon>
+                            Comment
+                        </button>
+                    </mat-card-actions>
+
+                </mat-expansion-panel-header>
+
+
+
+
+                <p>I'm visible because I am open</p>
+            </mat-expansion-panel>
+
         </mat-card>
     </div>
 
