--- a/src/app/global/app-side-navbar/components/app-toolbar-list/app-toolbar-list.component.html
+++ b/src/app/global/app-side-navbar/components/app-toolbar-list/app-toolbar-list.component.html
@@ -16,7 +16,7 @@
         </button>
 
         <button mat-icon-button aria-label="home">
-            <mat-icon>store</mat-icon>
+            <mat-icon>bill</mat-icon>
         </button>
 
     </div>
