--- a/src/app/layouts/user/components/comments-modal/comments-modal.component.html
+++ b/src/app/layouts/user/components/comments-modal/comments-modal.component.html
@@ -16,7 +16,7 @@
             </mat-card-header>
             <mat-card-content>
                 <p class="subtitle-2 my-2">
-                    <mat-card-subtitle>{{comment.content}}</mat-card-subtitle>
+                    <mat-card-subtitle>{{comment.comment}}</mat-card-subtitle>
                 </p>
             </mat-card-content>
 
