--- a/src/app/layouts/user/components/timeline-posts-list/timeline-posts-list.component.html
+++ b/src/app/layouts/user/components/timeline-posts-list/timeline-posts-list.component.html
@@ -18,7 +18,7 @@
                 <p class="subtitle-2 my-2">
 
 
-                    {{post.content}}
+                    {{post.caption}}
                 </p>
             </mat-card-content>
 
