--- a/src/app/layouts/user/components/add-post-form/add-post-form.component.html
+++ b/src/app/layouts/user/components/add-post-form/add-post-form.component.html
@@ -17,7 +17,7 @@
                 <button mat-icon-button color="primary" fxFlex="12">
                     <mat-icon>image</mat-icon>
                 </button>
-                <button mat-flat-button color="primary" fxFlex="12">
+                <button mat-flat-button class="color-swatch color-swatch-green " fxFlex="12">
                     
                     
                     post
