--- a/src/app/layouts/user/components/timeline-posts-list/timeline-posts-list.component.scss
+++ b/src/app/layouts/user/components/timeline-posts-list/timeline-posts-list.component.scss
@@ -2,3 +2,10 @@
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
 }
+
+.post-img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    object-position: top center;
+}
