--- a/src/app/layouts/user/user.component.html
+++ b/src/app/layouts/user/user.component.html
@@ -7,7 +7,7 @@
 
 
 <mat-sidenav-container class="app-container">
-    <mat-sidenav #sidenav mode="side" opened="false"  [class.mat-elevation-z4]="true" class="app-sidenav"  >
+    <mat-sidenav #sidenav mode="side" opened  [class.mat-elevation-z4]="true" class="app-sidenav"  >
         <app-sidenav-list></app-sidenav-list>
     </mat-sidenav>
     <mat-sidenav-content>
